# etspy

./: .flake8  .gitignore  .gitlab-ci.yml  MANIFEST  README.md  TomoTools.yml  __init__.py  api.html  base.py  cov.xml  development.html  genindex.html  hyperspy_log.py  index.html  io.py  main.css  objects.inv  pyproject.toml  recon.py  run_tests.sh  searchindex.js  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/install-with-conda/: action.yml
.github/actions/install-with-poetry/: action.yml
.github/actions/install-with-uv/: action.yml
.github/actions/push-doc/: action.yml
.github/workflows/: alternate_testing.yml  docs.yml  main.yml
.pytest_cache/v/cache/: lastfailed  nodeids
_modules/: etspy.html  index.html
_modules/etspy/: align.html  base.html  datasets.html  io.html  recon.html  simulation.html  transform.html  utils.html  visualize.html
_sources/: development.md.txt
_sources/api/: etspy.AlignmentMethod.COM.rst.txt  etspy.AlignmentMethod.COM_CL.rst.txt  etspy.AlignmentMethod.PC.rst.txt  etspy.AlignmentMethod.STACK_REG.rst.txt  etspy.AlignmentMethod.is_valid_value.rst.txt  etspy.AlignmentMethod.rst.txt  etspy.AlignmentMethod.values.rst.txt  etspy.align.CoMAligner.__init__.rst.txt  etspy.align.CoMAligner.calculate_shifts.rst.txt  etspy.align.CoMAligner.rst.txt  etspy.align.CommonLineAligner.__init__.rst.txt  etspy.align.CommonLineAligner.calc_shifts_cl.rst.txt  etspy.align.CommonLineAligner.calculate_shifts.rst.txt  etspy.align.CommonLineAligner.pad_line.rst.txt  etspy.align.CommonLineAligner.rst.txt  etspy.align.PhaseCorrelationAligner.__init__.rst.txt  etspy.align.PhaseCorrelationAligner.calculate_shifts.rst.txt  etspy.align.PhaseCorrelationAligner.rst.txt  etspy.align.StackAligner.__init__.rst.txt  etspy.align.StackAligner.align.rst.txt  etspy.align.StackAligner.calculate_shifts.rst.txt  etspy.align.StackAligner.rst.txt  etspy.align.StackRegAligner.__init__.rst.txt  etspy.align.StackRegAligner.calculate_shifts.rst.txt  etspy.align.StackRegAligner.rst.txt  etspy.align.TiltAligner.__init__.rst.txt  etspy.align.TiltAligner.align_tilt_axis.rst.txt  etspy.align.TiltAligner.rst.txt  etspy.align.TiltCOMAligner.__init__.rst.txt  etspy.align.TiltCOMAligner.align_tilt_axis.rst.txt  etspy.align.TiltCOMAligner.rst.txt  etspy.align.TiltMaxImageAligner.__init__.rst.txt  etspy.align.TiltMaxImageAligner.align_tilt_axis.rst.txt  etspy.align.TiltMaxImageAligner.rst.txt  etspy.align.align_stack.rst.txt  etspy.align.align_to_other.rst.txt  etspy.align.apply_shifts.rst.txt  etspy.align.apply_shifts_cuda.rst.txt  etspy.align.calc_shifts_cl.rst.txt  etspy.align.calc_shifts_com_cl.rst.txt  (+102 more)
_static/: sphinx_immaterial_theme.58d549dac8fe20eca.min.css  sphinx_immaterial_theme.98b57845f223ccb1d.min.css
api/: etspy.AlignmentMethod.COM.html  etspy.AlignmentMethod.COM_CL.html  etspy.AlignmentMethod.PC.html  etspy.AlignmentMethod.STACK_REG.html  etspy.AlignmentMethod.html  etspy.AlignmentMethod.is_valid_value.html  etspy.AlignmentMethod.values.html  etspy.align.CoMAligner.__init__.html  etspy.align.CoMAligner.calculate_shifts.html  etspy.align.CoMAligner.html  etspy.align.CommonLineAligner.__init__.html  etspy.align.CommonLineAligner.calc_shifts_cl.html  etspy.align.CommonLineAligner.calculate_shifts.html  etspy.align.CommonLineAligner.html  etspy.align.CommonLineAligner.pad_line.html  etspy.align.PhaseCorrelationAligner.__init__.html  etspy.align.PhaseCorrelationAligner.calculate_shifts.html  etspy.align.PhaseCorrelationAligner.html  etspy.align.StackAligner.__init__.html  etspy.align.StackAligner.align.html  etspy.align.StackAligner.calculate_shifts.html  etspy.align.StackAligner.html  etspy.align.StackRegAligner.__init__.html  etspy.align.StackRegAligner.calculate_shifts.html  etspy.align.StackRegAligner.html  etspy.align.TiltAligner.__init__.html  etspy.align.TiltAligner.align_tilt_axis.html  etspy.align.TiltAligner.html  etspy.align.TiltCOMAligner.__init__.html  etspy.align.TiltCOMAligner.align_tilt_axis.html  etspy.align.TiltCOMAligner.html  etspy.align.TiltMaxImageAligner.__init__.html  etspy.align.TiltMaxImageAligner.align_tilt_axis.html  etspy.align.TiltMaxImageAligner.html  etspy.align.align_stack.html  etspy.align.align_to_other.html  etspy.align.apply_shifts.html  etspy.align.apply_shifts_cuda.html  etspy.align.calc_shifts_cl.html  etspy.align.calc_shifts_com_cl.html  (+102 more)
docs/: api.md  api.rst  conf.py  development.md  index.rst
docs/_static/: custom_css.css  jquery.leaveNotice-nist.js
docs/_templates/: layout.html
docs/examples/: etspy_demo.ipynb
etspy/: __init__.py  align.py  api.py  base.py  datasets.py  hyperspy_extension.yaml  io.py  recon.py  simulation.py  transform.py  utils.py  visualize.py
etspy/projmatch/: __init__.py  proj_match.py  shift.py
etspy/tests/: .coveragerc-cuda  .coveragerc-nocuda  __init__.py  test_align.py  test_base.py  test_cuda.py  test_datasets.py  test_io.py  test_projmatch.py  test_recon.py  test_simulation.py  test_utils.py  test_version.py
etspy/tests/test_data/: HAADF.dm3  HAADF.rawtlt  HAADF.txt
etspy/tests/test_data/DM_Series_Test/: BF_001.dm3
etspy/tests/test_data/SerialEM_Multiframe_Test/: test_000.mrc.mdoc  test_001.mrc.mdoc  test_002.mdoc
examples/: etspy_demo.html
resources/: dockerfile  etspy demo.html  etspy demo.ipynb  etspy-dev-macos.yml  etspy-dev.yml  etspy-gpu-dev.yml  etspy-gpu.yml  etspy-macos.yml  etspy.yml  tomo.yml  tomotools demo.html  tomotools demo.ipynb  tomotools.yaml
scratch/: scratch.py
tomotools/: __init__.py  align.py  api.py  base.py  conftest.py  datasets.py  io.py  realtime.py  recon.py  simulation.py  utils.py
tomotools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tomotools/tests/: test_align  test_align.py  test_base.py  test_cuda.py  test_datasets.py  test_io.py  test_recon.py  test_simulation.py  test_utils.py
tomotools/tests/test_data/DM_Series_Test/: BF_001.dm3  BF_002.dm3  BF_003.dm3
