[tool.poetry]
name = "etspy"
version = "1.0.1"
description = "Suite of tools for processing and reconstruction of electron tomography data"
authors = [
    "Andrew A. Herzing <andrew.herzing@nist.gov>",
    "Joshua Taillon <joshua.taillon@nist.gov>"
]
license = "NIST Public License"
readme = "README.md"
homepage = "https://pages.nist.gov/etspy/"
repository = "https://github.com/usnistgov/etspy/"
documentation = "https://pages.nist.gov/etspy/"
packages = [
    { include = "etspy" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pystackreg = "^0.2.8"
astra-toolbox = ">=2.1"
hyperspy = "^2.1.1"
hyperspy-gui-ipywidgets = "^2.0.2"
numba = "^0.60.0"
typing-extensions = "^4.12.2"
h5py = "^3.12.1"

# extra optional dependencies for the "extras" groups (for "pip install etspy[...]")
ipykernel = {version = "^6.29.5", optional = true}
cupy = {version = "^13.3.0", optional = true}
numpy = ">1.26"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
pytest = "^8.3.3"
ruff = "^0.6.6"
isort = "^5.13.2"
sphinx = "8.0.2"
numpydoc = "^1.8.0"
myst-parser = "^4.0.0"
sphinx-immaterial = "^0.12.2"
myst-nb = "^1.1.2"
pytest-cov = "^5.0.0"
tomli = "^2.0.2"


[tool.poetry.group.gpu.dependencies]
cupy = {version = "^13.3.0", optional = true}


[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.extras]
gpu = ["cupy"]
jupyter = ["ipykernel"]
all = ["cupy", "ipykernel"]  # shortcut for all extras

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hyperspy.extensions"]
etspy = "etspy"

[tool.isort]
profile = "black"
src_paths = ["etspy"]

[tool.ruff]

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "D", "YTT", "UP", "S", "FBT", "B", "A", "COM", "C4",
    "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI",
    "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL",
    "TRY", "RUF"
]
ignore = ["FBT001", "FBT002", "TRY003", "RET504"]
exclude = ["*.ipynb","docs/**"]

[tool.ruff.lint.per-file-ignores]
"etspy/tests/*" = ["S101", "D102"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
omit = [
    "etspy/tests/*"
]

[tool.coverage.report]
# the parts of code covered by CUDA tests are excluded
# by default
exclude_also = [
    "def _upsampled_dft",
    "def _cupy_phase_correlate",
    "_cupy_calculate_shifts",
    "nocuda"
]

[tool.pytest.ini_options]
testpaths = [
    "etspy/tests"
]
addopts = "--cov=etspy --cov-report html:etspy/tests/htmlcov --cov-report=xml:etspy/tests/coverage.xml --cov-report term-missing --cov-append"
#mpl-baseline-path = "etspy/tests/test_data/pytest_mpl_figures"

[tool.mypy]
disable_error_code = "import-untyped"
exclude = [
    '^docs/conf\.py$'
]